# backuphelper

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BackupHelper.sln  BackupHelper.vcxproj  BackupHelper.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  Untitled.mdj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  aim.md  build_linux.sh  cmake_install.cmake  git_reminder.md  requirements.md  tasks.md  test_design.md  test_huffman.cpp
BackupHelper.dir/Release/: BackupHelper.exe.recipe
BackupHelper.dir/Release/BackupHelper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: BackupManagerTests.cpp  EncryptionTests.cpp  FilePackagerTests.cpp  FileTests.cpp  FilterTests.cpp  HuffmanCompressorTests.cpp  TaskTests.cpp  main.cpp
src/core/: BackupEngine.cpp  BackupEngine.hpp  DataProcessor.hpp  Filter.cpp  Filter.hpp  RealTimeBackupManager.cpp  RealTimeBackupManager.hpp  TimerBackupManager.cpp  TimerBackupManager.hpp  Types.hpp
src/core/models/: File.cpp  File.hpp
src/core/tasks/: BackupTask.cpp  BackupTask.hpp  RestoreTask.cpp  RestoreTask.hpp
src/utils/: ConsoleLogger.cpp  ConsoleLogger.hpp  Encryption.cpp  Encryption.hpp  FilePackager.cpp  FilePackager.hpp  FileSystem.cpp  FileSystem.hpp  FileSystemMonitor.cpp  FileSystemMonitor.hpp  HuffmanCompressor.cpp  HuffmanCompressor.hpp  ILogger.hpp  Logger.cpp  Logger.hpp
test_backup/: backup.pkg.enc
test_source/: BIGFILE.txt
test_source/subdir/: nested.txt
testdata/backup/: backup.pkg  backup.pkg.enc  file1.txt  file2.txt.huff
testdata/source/: file1.txt  file2.txt
testdata/source/subdir/: nested.txt  nested.txt.huff
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
